--- a/src/vote/package.json
+++ b/src/vote/package.json
@@ -4,7 +4,7 @@
   "description": "Voting app for Docker demo",
   "repository": "https://github.com/subfuzion/node-voter",
   "author": "Tony Pujals <tony@subfuzion.com> (https://twitter.com/subfuzion)",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "start": "node main.js",
     "test": "mocha --ui tdd"
