--- a/src/reports/docker-compose.test.yml
+++ b/src/reports/docker-compose.test.yml
@@ -9,8 +9,6 @@ services:
   sut:
     image: reports
     entrypoint: node_modules/mocha/bin/mocha --ui tdd test/test.js 
-    environment:
-      - DATABASE_NAME=reports_test_db
     networks:
       - test_net
     depends_on:
@@ -19,8 +17,15 @@ services:
   reports:
     build: .
     image: reports
+    networks:
+      - test_net
+    depends_on:
+      - database-proxy
+
+  database-proxy:
+    image: subfuzion/vote-database-proxy
     environment:
-      - DATABASE_NAME=reports_test_db
+      - DATABASE_NAME=test_db
     networks:
       - test_net
     depends_on:
@@ -30,4 +35,3 @@ services:
     image: mongo:3.6
     networks:
       - test_net
-
