--- a/aws/cf/ecs-ec2/reports.yml
+++ b/aws/cf/ecs-ec2/reports.yml
@@ -15,7 +15,7 @@ Parameters:
     Description: A name for the service
   ImageUrl:
     Type: String
-    Default: subfuzion/vote-reports:1.0.4
+    Default: subfuzion/vote-reports:1.0.6
     Description: The url of a docker image that contains the application process that
                  will handle the traffic for this service
   XRayImageUrl:
@@ -89,16 +89,16 @@ Resources:
           Memory: 440
           Image: !Ref 'ImageUrl'
           Environment:
-            - Name: DATABASE_URI
+            - Name: VOTES_URI
               Value:
                 Fn::ImportValue:
-                  !Join [':', [!Ref 'EnvironmentName', 'MongoURI']]
+                  !Join [':', [!Ref 'EnvironmentName', 'DatabaseProxyURI']]
           PortMappings:
             - ContainerPort: !Ref 'ContainerPort'
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
-              awslogs-group: !Join ['-', [!Ref 'EnvironmentName', 'service', !Ref 'ServiceName']]
+              awslogs-group: !Ref 'LogGroup'
               awslogs-region: !Ref 'AWS::Region'
               awslogs-stream-prefix: !Ref 'ServiceName'
         - Name: "envoy"
@@ -107,9 +107,9 @@ Resources:
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: LogGroup }
-              awslogs-region: { Ref: "AWS::Region" }
-              awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName', "envoy"]]
+              awslogs-group: !Ref 'LogGroup'
+              awslogs-region: !Ref 'AWS::Region'
+              awslogs-stream-prefix: 'envoy'
           Environment:
             - Name: "LATTICE_VIRTUAL_NODE_UID"
               Value: { Ref: LatticeVirtualNodeUID }
@@ -136,9 +136,9 @@ Resources:
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: LogGroup }
-              awslogs-region: { Ref: "AWS::Region" }
-              awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName', "router"]]
+              awslogs-group: !Ref 'LogGroup'
+              awslogs-region: !Ref 'AWS::Region'
+              awslogs-stream-prefix: 'router'
           LinuxParameters:
             Capabilities:
               Add:
@@ -167,7 +167,7 @@ Resources:
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
-              awslogs-group: !Join ['-', [!Ref 'EnvironmentName', 'service', !Ref 'ServiceName']]
+              awslogs-group: !Ref 'LogGroup'
               awslogs-region: !Ref 'AWS::Region'
               awslogs-stream-prefix: 'xray'
 
@@ -363,7 +363,7 @@ Resources:
         - !Ref ScaleUpPolicy
 Outputs:
   ReportsURI:
-    Description: The url of the external load balancer
+    Description: The URL of the Reports Internal Load Balancer
     Value:
       Fn::Join:
         - ''
