cloudwatch_agent: Shrink final image
Use `debian:stretch` as base image for distribution image, reducing
final runtime image size to 112MB (from > 900MB).

--- a/cloudwatch_agent/Dockerfile
+++ b/cloudwatch_agent/Dockerfile
@@ -3,9 +3,9 @@ FROM golang:1.11.2-stretch AS build
 WORKDIR /build
 COPY . .
 RUN go get -d -v ./... && \
-    go install -v ./... 
+    go install -v ./...
 
 
-FROM golang:1.11.2-stretch
+FROM debian:stretch
 COPY --from=build /go/bin/envoy_cloudwatch_agent /usr/bin/envoy_cloudwatch_agent
 CMD ["/usr/bin/envoy_cloudwatch_agent"]
