fixing the votes template as well

--- a/aws/cf/ecs-ec2/votes.yml
+++ b/aws/cf/ecs-ec2/votes.yml
@@ -114,7 +114,7 @@ Resources:
             LogDriver: "awslogs"
             Options:
               awslogs-group: !Ref 'LogGroup'
-              awslogs-region: !Ref: 'AWS::Region'
+              awslogs-region: !Ref 'AWS::Region'
               awslogs-stream-prefix: 'envoy'
           Environment:
             - Name: "LATTICE_VIRTUAL_NODE_UID"
