update container port for web

--- a/aws/cf/ecs-ec2/web.yml
+++ b/aws/cf/ecs-ec2/web.yml
@@ -90,6 +90,8 @@ Resources:
           Memory: 440
           Image: !Ref 'ImageUrl'
           Environment:
+            - Name: PORT
+              Value: !Ref 'ContainerPort'
             - Name: REPORTS_URI
               Value: reports.votemesh.local
           PortMappings:
