--- a/aws/cf/ecs-ec2/web.yml
+++ b/aws/cf/ecs-ec2/web.yml
@@ -126,6 +126,8 @@ Resources:
                                 - 'ServicesDomain'
             - Name: "LOG_LEVEL"
               Value: "debug"
+            - Name: "PORT"
+              Value: !Ref 'ContainerPort'
           User: "1337"
           VolumesFrom:
             - SourceContainer: !Ref 'ServiceName'
