update reports cfn for port, update deploy script output

--- a/aws/cf/ecs-ec2/reports.yml
+++ b/aws/cf/ecs-ec2/reports.yml
@@ -88,6 +88,9 @@ Resources:
           Cpu: 440
           Memory: 440
           Image: !Ref 'ImageUrl'
+          Environment:
+            - Name: PORT
+              Value: !Ref 'ContainerPort'
           PortMappings:
             - ContainerPort: !Ref 'ContainerPort'
           LogConfiguration:
