user 1337 doesn't have write perms to /etc; add envoy task def envvars for overriding log path to /tmp

--- a/aws/cf/ecs-ec2/reports.yml
+++ b/aws/cf/ecs-ec2/reports.yml
@@ -112,6 +112,10 @@ Resources:
               awslogs-region: !Ref 'AWS::Region'
               awslogs-stream-prefix: 'envoy'
           Environment:
+            - Name: ENVOY_CONFIG_FILE
+              Value: /tmp/envoy.yaml
+            - Name: ENVOY_ADMIN_ACCESS_LOG_FILE
+              Value: /tmp/admin_access.log
             - Name: "LATTICE_VIRTUAL_NODE_UID"
               Value: { Ref: LatticeVirtualNodeUID }
             - Name: "EC2_REGION"
