add debugging support

--- a/aws/cf/ecs-ec2/reports.yml
+++ b/aws/cf/ecs-ec2/reports.yml
@@ -105,6 +105,12 @@ Resources:
         - Name: "envoy"
           Image: "111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-lattice-envoy:v1.8.0.0-beta"
           Essential: true
+          Command:
+            - "envoy"
+            - "-c"
+            - "/tmp/envoy.yaml"
+            - "-l"
+            - "debug"
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
