Added HealthCheckGracePeriodSeconds for Web.yaml to give envoy cushion to setup mesh

--- a/aws/cf/ecs-ec2/web.yml
+++ b/aws/cf/ecs-ec2/web.yml
@@ -190,6 +190,7 @@ Resources:
         Fn::ImportValue:
           !Join [':', [!Ref 'EnvironmentName', 'ClusterName']]
       LaunchType: EC2
+      HealthCheckGracePeriodSeconds: 30
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 75
