--- a/src/reports/package.json
+++ b/src/reports/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "@subfuzion/database": "1.2.2",
+    "aws-xray-sdk-core": "git+http://git@github.com/awssandra/aws-xray-node-sdk-core-experimental",
+    "aws-xray-sdk-express": "git+http://git@github.com/awssandra/aws-xray-node-sdk-express-experimental",
     "body-parser": "~1.18.3",
     "debug": "~4.1.0",
     "express": "~4.16.4",
